--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <html>
     <link rel="stylesheet" href="style.css">
     <title>Job Site | Home</title>
-    <body>
     <header>
     </header>
-    <nav><a href="index.html"> Home</a> | <a href ="market.html">Job Market & Earning Potential</a> | <a href="training.html">Training/Education</a> | <a href="description.html">Job Description</a> | <a href="skills.html">Personal Inventory/Skills</a> | <a href="contact.html">Contact </a></nav>
+    <div><nav><a href="index.html"> Home</a> | <a href ="market.html">Job Market & Earning Potential</a> | <a href="training.html">Training/Education</a> | <a href="description.html">Job Description</a> | <a href="skills.html">Personal Inventory/Skills</a> | <a href="contact.html">Contact </a></nav></div>
+    
         <main>
             <article>
               
             </article>
-            <aside>
-
-            </aside>
         </main>
         <footer>
 
         </footer>
-    </body>
 </html>
