--- a/skills.html
+++ b/skills.html
@@ -4,14 +4,11 @@
     <body>
     <header>
     </header>
-    <nav><a href="index.html"> Home</a> | <a href ="market.html">Job Market & Earning Potential</a> | <a href="training.html">Training/Education</a> | <a href="description.html">Job Description</a> | <a href="skills.html">Personal Inventory/Skills</a> | <a href="contact.html">Contact </a></nav>
+    <div><nav class="navtxt"><a href="index.html"> Home</a> | <a href ="market.html">Job Market & Earning Potential</a> | <a href="training.html">Training/Education</a> | <a href="description.html">Job Description</a> | <a href="skills.html">Personal Inventory/Skills</a> | <a href="contact.html">Contact </a></nav></div>
         <main>
             <article>
               
             </article>
-            <aside>
-
-            </aside>
         </main>
         <footer>
 
