--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     </header>
     <div>
         <nav>
-            <a href="index.html"> Home</a><br>
-            <a href ="market.html">Job Market & Earning Potential</a><a href="training.html">Training/Education</a><br>
-            <a href="description.html">Job Description</a>
-            <a href="skills.html">Personal Inventory/Skills</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html"> Home</a><br><br>
+            <a href ="market.html">Job Market & Earning Potential</a><br><br>
+            <a href="training.html">Training/Education</a><br><br>
+            <a href="description.html">Job Description</a><br><br>
+            <a href="skills.html">Personal Inventory/Skills</a><br><br>
+            <a href="contact.html">Contact</a><br><br>
         </nav>
     </div>
     <main>
