--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </header>
     <div>
         <nav>
+            <img src="icons/homeIcon.jpg" width="30%">
             <a href="index.html"> Home</a><br><br>
             <a href ="market.html">Job Market & Earning Potential</a><br><br>
             <a href="training.html">Training/Education</a><br><br>
