--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     </header>
     <div>
         <nav>
-            <img src="icons/homeIcon.jpg" width="30%">
-            <a href="index.html"> Home</a><br><br>
+            <a href="index.html"> <img id="navimg" src="icons/homeIcon.png"> Home</a><br><br>
+            <img id="navimg" src="icons/marketIcon.png">
             <a href ="market.html">Job Market & Earning Potential</a><br><br>
+            <img id="navimg" src="icons/trainingIcon.png">
             <a href="training.html">Training/Education</a><br><br>
+            <img id="navimg" src="icons/descriptionIcon.png">
             <a href="description.html">Job Description</a><br><br>
+            <img id="navimg" src="icons/skills.png">
             <a href="skills.html">Personal Inventory/Skills</a><br><br>
+            <img id="navimg"src="icons/contact.png">
             <a href="contact.html">Contact</a><br><br>
         </nav>
     </div>
