--- a/colortest.html
+++ b/colortest.html
@@ -1,9 +1,9 @@
 <html>
     <main>
-        <aside style="background-color:#A4BAB7; height:300px">
+        <aside style="background-color:#ba7; height:300px">
 
         </aside>
-        <article style="background-color:#AABBBB; height:300px">
+        <article style="background-color:#443; height:300px">
             
         </article>
     </main>
