--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <html>
     <link rel="stylesheet" href="style.css">
     <title>Job Site | Home</title>
-    <header>
-    </header>
-    <div>
-        <nav>
-            <a href="index.html"> <img id="navimg" src="icons/homeIcon.png"> Home</a><br><br>
-            <img id="navimg" src="icons/marketIcon.png">
-            <a href ="market.html">Job Market & Earning Potential</a><br><br>
-            <img id="navimg" src="icons/trainingIcon.png">
-            <a href="training.html">Training/Education</a><br><br>
-            <img id="navimg" src="icons/descriptionIcon.png">
-            <a href="description.html">Job Description</a><br><br>
-            <img id="navimg" src="icons/skills.png">
-            <a href="skills.html">Personal Inventory/Skills</a><br><br>
-            <img id="navimg"src="icons/contact.png">
-            <a href="contact.html">Contact</a><br><br>
-        </nav>
-    </div>
-    <main>
-        <article>
-            
-        </article>
-    </main>
-    <footer>
+    <body>
+        <header>
+        <img src="page titles/hometitle.png" id="hdrimg">
+        </header>
+        <!--All the Nav things-->
+        <div>
+            <nav>
+                <img id="navimg" src="icons/homeIcon.png">
+                <a href="index.html"> Home</a><br><br>
+                <img id="navimg" src="icons/marketIcon.png">
+                <a href ="market.html">Job Market & Earning Potential</a><br><br>
+                <img id="navimg" src="icons/trainingIcon.png">
+                <a href="training.html">Training/Education</a><br><br>
+                <img id="navimg" src="icons/descriptionIcon.png">
+                <a href="description.html">Job Description</a><br><br>
+                <img id="navimg" src="icons/skills.png">
+                <a href="skills.html">Personal Inventory/Skills</a><br><br>
+                <img id="navimg"src="icons/contact.png">
+                <a href="contact.html">Contact</a><br><br>
+            </nav>
+        </div>
+        <main>
+            <article>
+                
+            </article>
+        </main>
+        <footer>
 
-    </footer>
+        </footer>
+    </body>
 </html>
