--- a/market.html
+++ b/market.html
@@ -2,12 +2,30 @@
     <link rel="stylesheet" href="style.css">
     <title>Job Site | Market & Earning Potential</title>
     <body>
-    <header>
-    </header>
-    <div><nav class="navtxt"><a href="index.html"> Home</a> | <a href ="market.html">Job Market & Earning Potential</a> | <a href="training.html">Training/Education</a> | <a href="description.html">Job Description</a> | <a href="skills.html">Personal Inventory/Skills</a> | <a href="contact.html">Contact </a></nav></div>
+        <header>
+        <img src="page titles/markettitle1.png" id="hdrimg">
+        <img src="page titles/markettitle2.png" id="hdrimg">
+        </header>
+        <!--All the Nav things-->
+        <div>
+            <nav>
+                <img id="navimg" src="icons/homeIcon.png">
+                <a href="index.html"> Home</a><br><br>
+                <img id="navimg" src="icons/marketIcon.png">
+                <a href ="market.html">Job Market & Earning Potential</a><br><br>
+                <img id="navimg" src="icons/trainingIcon.png">
+                <a href="training.html">Training/Education</a><br><br>
+                <img id="navimg" src="icons/descriptionIcon.png">
+                <a href="description.html">Job Description</a><br><br>
+                <img id="navimg" src="icons/skills.png">
+                <a href="skills.html">Personal Inventory/Skills</a><br><br>
+                <img id="navimg"src="icons/contact.png">
+                <a href="contact.html">Contact</a><br><br>
+            </nav>
+        </div>
         <main>
             <article>
-              
+                
             </article>
         </main>
         <footer>
