--- a/training.html
+++ b/training.html
@@ -3,7 +3,7 @@
     <title>Job Site |  Training/Education</title>
        <body>
         <header>
-        <img src="page titles/trainedutitle.png" id="hdrimg2">
+        <img src="page titles/trainedu.png" id="hdrimg2">
         </header>
         <!--All the Nav things-->
         <div>
