--- a/description.html
+++ b/description.html
@@ -3,7 +3,7 @@
     <title>Job Site | Job Description</title>
     <body>
         <header>
-        <img src="page titles/hometitle.png" id="hdrimg">
+        <img src="page titles/desctitle.png" id="hdrimg2">
         </header>
         <!--All the Nav things-->
         <div>
