images and page titles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         </div>
         <main>
             <article>
-                
+                <p class="sbhdingtxt">Graphic Design</p>
+                <p class="bodytxt">This field incorperates arts and technology to make visually appealing content for advertisements, websites, and more. <br>
+                Graphic Designers collaborate with clients, stakeholders, and other members of a team to create things that can provoke emotion and grab attention.
+                </p>
+                <img src="designer.jpg">
+                <img src="doodleimg.png">
             </article>
         </main>
         <footer>
