--- a/market.html
+++ b/market.html
@@ -3,8 +3,7 @@
     <title>Job Site | Market & Earning Potential</title>
     <body>
         <header>
-        <img src="page titles/markettitle1.png" id="hdrimg">
-        <img src="page titles/markettitle2.png" id="hdrimg">
+        <img src="page titles/markettitle.png" id="hdrimg2">
         </header>
         <!--All the Nav things-->
         <div>
