--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
     <title>Job Site | Personal Inventory/Skills</title>
     <body>
         <header>
-        <img src="page titles/hometitle.png" id="hdrimg">
+        <img src="page titles/skillstitle.png" id="hdrimg2">
         </header>
         <!--All the Nav things-->
         <div>
