--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <title>Job Site | Contact</title>
     <body>
         <header>
-        <img src="page titles/contacttitle.png" id="hdrimg">
+        <img src="page titles/contacttitle.png" id="hdrimg2">
         </header>
         <!--All the Nav things-->
         <div>
