--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,16 @@
         </div>
         <main>
             <article>
-                
+                &nbsp;<br>
+                &nbsp;<br>
+                <p class="bodytxt">
+                    <ul class="bodytxt">Email
+                        <li>khoyt7168@gmail.com</li>
+                    </ul>
+                <ul class="bodytxt">Phone
+                    <li>509-879-6687</li>
+                    </ul>
+                </p>
             </article>
         </main>
         <footer>
