--- a/description.html
+++ b/description.html
@@ -24,7 +24,14 @@
         </div>
         <main>
             <article>
-                
+                &nbsp;<br>
+                &nbsp;<br>
+                <ul class="bodytxt">
+                <li>Design or create graphics to meet specific commercial or promotional needs, such as packaging, displays, or logos.
+                    <br> May use a variety of mediums to achieve artistic or decorative effects.</li>
+                    <br>
+                <li>Combine artistic talent and technology to produce interactive content, 
+                    <br> commercial product and packaging design, and promotional materials.</li>
             </article>
         </main>
         <footer>
