--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <p class="bodytxt">This field incorperates arts and technology to make visually appealing content for advertisements, websites, and more. <br>
                 Graphic Designers collaborate with clients, stakeholders, and other members of a team to create things that can provoke emotion and grab attention.
                 </p>
-                <img src="designer.jpg">
-                <img src="doodleimg.png">
+                <img src="images/designer.jpg">
+                <img src="images/doodleimage.png">
             </article>
         </main>
         <footer>
