--- a/market.html
+++ b/market.html
@@ -24,7 +24,16 @@
         </div>
         <main>
             <article>
-                
+                &nbsp;<br>
+                &nbsp;<br>
+                <p class="bodytxt">The Median Salary for a Graphic Designer in the US is $61,300.<br>
+                This job has a predicted 3% change in employment.</p>
+                &nbsp;<br>
+                &nbsp;<br>
+                <p>
+                    <img src="images/salarygraph.png" width="30%">
+                    <img src="images/jobmarkettable.png" width="30%">
+                </p>
             </article>
         </main>
         <footer>
