--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,21 @@
         </div>
         <main>
             <article>
-                
+                &nbsp;<br>
+                &nbsp;<br>
+                <ul class="bodytxt">Soft Skills
+                    <li>creativity</li>
+                    <li>problem solving</li>
+                    <li>attention to detail</li>
+                    <li>Computer Skills</li>
+                </ul>
+                <ul class="bodytxt"> Hard Skills
+                    <li>Adobe Photoshop</li>
+                    <li>Microsoft Word</li>
+                    <li>Microsoft Powerpoint</li>
+                    <li>Canva</li>
+                </ul>
+                <a class="a2" href="Resume.pdf">Resume</a>
             </article>
         </main>
         <footer>
