--- a/training.html
+++ b/training.html
@@ -24,7 +24,11 @@
         </div>
         <main>
             <article>
-                
+                &nbsp;<br>
+                &nbsp;<br>
+            <p class="bodytxt"> The Average degree earned by people employed is a Bachelors Degree,<br>
+            but there are also people with no degree employed in this career.</p>
+            <img src="images/educationgraph.png" width="30%">
             </article>
         </main>
         <footer>
