--- a/description.html
+++ b/description.html
@@ -32,6 +32,9 @@
                     <br>
                 <li>Combine artistic talent and technology to produce interactive content, 
                     <br> commercial product and packaging design, and promotional materials.</li>
+                <br>
+                <img src="images/paintpallete.png">
+                <img src="images/tech.png" width="20%">
             </article>
         </main>
         <footer>
