--- a/skills.html
+++ b/skills.html
@@ -38,7 +38,7 @@
                     <li>Microsoft Powerpoint</li>
                     <li>Canva</li>
                 </ul>
-                <a class="a2" href="Resume.pdf">Resume</a>
+                <a id="a2" href="resume.pdf">Resume</a>
             </article>
         </main>
         <footer>
